tooling/nargo_cli/tests/snapshots/execution_success/regression_8235/execute__tests__expanded.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: expanded_code
---
fn main(a: bool) -> pub bool {
    if a {
        let b: u32 = func_4(1569582039);
        true
    } else {
        false
    }
}

fn func_4(a: u32) -> u32 {
    a / (a % a)
}
