tooling/nargo_cli/tests/snapshots/execution_success/regression_8235/execute__tests__force_brillig_false_inliner_0.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "[noir_version]",
  "hash": "[hash]",
  "abi": {
    "parameters": [
      {
        "name": "a",
        "type": {
          "kind": "boolean"
        },
        "visibility": "private"
      }
    ],
    "return_type": {
      "abi_type": {
        "kind": "boolean"
      },
      "visibility": "public"
    },
    "error_types": {}
  },
  "bytecode": "H4sIAAAAAAAA/7WOwQkAMAgDTelAdoPuP1Ur+lJ/6kHIIxAOpOBnUQTW15prnMYvnvREo6d8beeZuWfbA8mpG5ugAQAA",
  "debug_symbols": "dZDdCoMwDIXfJde9sIP94KuMIbVGKYS2xHYwxHdflNXphVdpcvqdkDNBh20eGuf7MEL9nKBlR+SGhoI1yQUv02lWUNomMaKMYKcLFQ2jT1D7TKTgbSivn8Zo/FqTYVErBeg7qWLYO8LlNas/XZ2jt8LeHxt8PdL6nNYbru/6wL+kM9bx4V6ooL7Mix070xL+Muizt7tI0icWpYQWOVjsMuNit2qy4As=",
  "file_map": {
    "50": {
      "source": "fn main(a: bool) -> pub bool {\n    if (a) {\n        let b = func_4(1569582039);\n        true\n    } else {\n        false\n    }\n}\nfn func_4(a: u32) -> u32 {\n    (a / (a % a))\n}",
      "path": ""
    }
  },
  "names": [
    "main"
  ],
  "brillig_names": []
}
